--- a/src/main/resources/templates/events/show.html
+++ b/src/main/resources/templates/events/show.html
@@ -1,49 +1,63 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Detailed Event Information Page</title>
-    <link th:href="@{/css/eventInfo.css}" rel="stylesheet" />
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Detailed Event Information Page</title>
+  <link th:href="@{/css/eventInfo.css}" rel="stylesheet" />
 
-  </head>
+</head>
 
-  <body>
-    <div th:replace="navbar/show :: navbar" ></div>
+<body>
+<div th:replace="navbar/show :: navbar" ></div>
 
-    <div class="row">
-      <div class="column">
-        <img src="https://pbs.twimg.com/profile_images/1392981615865892867/Vnq2R4c6_400x400.jpg" alt="Damn" style="width:500px">
-      </div>
-      <div class="column">
-        <p th:text="${event.name}"></p>
-        <p th:text="${'Description: ' + event.description}"></p>
-        <p th:text="${'Date: ' + date}"></p>
-        <p th:text="${'Location: ' + event.location}"></p>
-        <button> Register</button>
-      </div>
-    </div>
+<div class="row">
+  <img class="eventPhoto" src="https://pbs.twimg.com/profile_images/1392981615865892867/Vnq2R4c6_400x400.jpg" alt="event photo">
+  <div class="eventinfo"><p id="eventName" style="font-size: 44px;">A Career in Strategy & Marketing Consultancy</p>
+    <p id="date" style="font-size: 30px;">date</p>
+    <p id="location" style="font-size: 26px;">location</p>
+    <button class="registerButton">Register</button></div>
+</div>
 
 
-    <div>
-      <div>
-        <div class="button">
-          <button class="description" onclick="displayDescription()">Description</button>
-          <button class="participants" onclick="displayParticipants()">Participants</button>
-        </div>
 
-        <div id="description">
-          <p>DESCRIPTION</p>
-        </div>
-        <div id="participants">
-          PARTICIPANTS
-        </div>
+<div class="bottom">
+  <div id="buttons"><button class="descriptionButton" onclick="displayDescription()">Description</button>
+    <button class="participantsButton" onclick="displayParticipants()">Participants</button></div>
+  <div id="lineWhite"></div>
+  <div id="lineGray"></div>
 
-      </div>
-    </div>
+  <div id="description">
+    <p class="descriptionText">
+      DESCRIPTION
+    </p>
+  </div>
 
+  <div id="participants">
+    <table>
+      <tr>
+        <td>
+          <img>
+          <p class="participant">X Club</p>
+        </td>
+        <td>
+          <img>
+          <p class="participant">X Club</p>
+        </td>
+        <td>
+          <img>
+          <p class="participant">X Club</p>
+        </td>
+        <td>
+          <img>
+          <p class="participant">X Club</p>
+        </td>
+      </tr>
+    </table>
+  </div>
+</div>
 
-    <script type="text/javascript" th:src="@{/js/eventInfo.js}"></script>
+<script type="text/javascript" th:src="@{/js/eventInfo.js}"></script>
 
-  </body>
+</body>
 </html>
