user profile page updated
the user's attended events are now automatically listed on the profile

--- a/src/main/resources/templates/attendances/create.html
+++ b/src/main/resources/templates/attendances/create.html
@@ -5,6 +5,19 @@
     <title>Title</title>
 </head>
 <body>
+<form method="post" action="/attendances/create">
 
+    <div class="container">
+
+        <center><h2>Add active member</h2></center>
+        <label>Club name</label>
+        <input type="text" id="eventname" placeholder="eventname" name="eventname" required>
+        <label>Username</label>
+        <input type="text" id="usermail" placeholder="usermail" name="usermail" required>
+        <label>Username</label>
+        <input type="text" id="attended" placeholder="attended" name="attended" required>
+        <button type="submit">Add attendance</button>
+    </div>
+</form>
 </body>
 </html>
