events list css edit

--- a/src/main/resources/static/css/eventsList.css
+++ b/src/main/resources/static/css/eventsList.css
@@ -128,7 +128,7 @@ Body {
     margin-right: 10%;
     height: 45px;
 
-    background: #45818F;
+    background: #6F77C1;
     border: none;
     border-radius: 15px;
 
@@ -144,7 +144,7 @@ Body {
     margin-right: 1%;
     height: 45px;
 
-    background: #45818F;
+    background: #4B86CC;
     border: none;
     border-radius: 15px;
 
