--- a/src/main/resources/templates/clubs/show.html
+++ b/src/main/resources/templates/clubs/show.html
@@ -12,8 +12,8 @@
 
 
 <!-- <button class="followbutton" type="submit" >follow</button> -->
-<form class="requestactivemembershipbutton" method="POST" th:action="@{/clubs/{id}/applications(id=${club.id})}">
-    <button type="submit" name="submit" value="value" class="link-button">request active membership</button>
+<form method="POST" th:action="@{/clubs/{id}/applications(id=${club.id})}">
+    <button class="requestactivemembershipbutton" type="submit" name="submit" value="value" >request active membership</button>
 </form>
 <a href="/events/create" class="createeventbutton">create event</a>
 
