can display another user's profile page

--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -106,13 +106,13 @@
 			<label>Department</label>
 			<input type="text" id="department" placeholder="department" name="department" required>
 			<label>Date Of Birth</label>
-			<input type="date" id="dateOfBirth" placeholder="dateOfBirth" name="dateOfBirth" required>
+			<input type="date" id="dateOfBirth" placeholder="dateOfBirth" name="dateOfBirth" >
 			<label>Start Of Studies</label>
-			<input type="text" id="startOfStudies" placeholder="startOfStudies" name="startOfStudies" required>
+			<input type="number" id="startOfStudies" placeholder="startOfStudies" name="startOfStudies" >
 			<label>Instagram Username</label>
-			<input type="text" id="instagramUsername" placeholder="instagramUsername" name="instagramUsername" required>
+			<input type="text" id="instagramUsername" placeholder="instagramUsername" name="instagramUsername" >
 			<label>LinkedIn Username</label>
-			<input type="text" id="linkedinUsername" placeholder="linkedinUsername" name="linkedinUsername" required>
+			<input type="text" id="linkedinUsername" placeholder="linkedinUsername" name="linkedinUsername" >
             <button type="submit">Register</button>    
         </div> 
 	</form>
