--- a/src/main/resources/templates/users/show.html
+++ b/src/main/resources/templates/users/show.html
@@ -81,7 +81,7 @@
 
 <script src="../../static/js/userProfilePage.js"></script>
 
-<button>
+<button href="/users/edit-profile-page">
     <div class="pencil">
         <div class="triangle"></div>
         <div class="rec1"></div>
