clubcontroller & usercontroller change

--- a/src/main/resources/templates/users/show.html
+++ b/src/main/resources/templates/users/show.html
@@ -48,7 +48,7 @@
 
         <table>
             <tr>
-                <td th:each="attendedevent: ${attendedevents}" th:value="${attendedevent.getId()}" th:text="${attendedevent.getName()}">
+                <td th:each="attendedevent: ${attendedevents}" th:value="${attendedevent.getId()}" th:text="${attendedevent.name}">
 
                 </td>
             </tr>
