edit event page html & css added, thymeleaf needed for placeholders of input boxes

--- a/src/main/resources/templates/events/edit.html
+++ b/src/main/resources/templates/events/edit.html
@@ -1,10 +1,74 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="https://www.thymeleaf.org/">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+    <title>Edit Event Page</title>
+    <link th:href="@{/css/createEventPage.css}" rel="stylesheet" />
 
+</head>
+<body style="font-family: Arial">
+<div class="square"></div>
+<div class="circle1"></div>
+<div class="parallelog"></div>
+<div class="circle2"></div>
+
+<div class="container" th:replace="navbar/show :: navbar" ></div>
+<h1> EDIT YOUR EVENT </h1>
+<form id="eventForm" action="/events/create" method="post">
+    <div class="box">
+        <div><span class="label"> Event Name</span>
+            <span class="ib"> <input type="text" class="formInput" name="name" id="name" required/></span></div>
+    </div>
+    <div class="box">
+        <span class="label">Place </span>
+        <span class="ib"> <input type="text" class="formInput" name="location" id="location"/>
+                </span>
+    </div>
+    <div class="box">
+        <span class="label">Fee </span>
+        <span class="ib"> <input type="number" class="formInput" name="fee" id="fee" required/></span>
+    </div>
+    <div class="box">
+        <span class="label">Club  </span>
+        <select class="formInput" name="clubId" id="clubId" required>
+            <option value="">Select club</option>
+            <option th:each="managedclub: ${managedclubs}" th:value="${managedclub.id}" th:text="${managedclub.name}"></option>
+        </select>
+    </div>
+    <div class="box">
+        <span class="label">Max Participants </span>
+        <span class="ib"> <input type="number" class="formInput" name="maxParticipants" id="maxParticipants" required/></span>
+    </div>
+    <div class="box">
+        <span class="label">Event Date</span>
+        <span class="ib">  <input type="date" class="formInput" name="startDate" id="startDate" required/></span> -
+        <span class="ib">  <input type="date" class="formInput" name="endDate" id="endDate" required/></span>
+    </div>
+    <div class="box">
+        <span class="label">Application Deadline</span>
+        <span class="ib"><input type="date" class="formInput" name="applicationDeadline" id="applicationDeadline" required/></span>
+    </div>
+    <div class="box">
+        <span class="label">Description </span>
+        <span class="ib">  <textarea type="text" id="description" name="description" rows="10" cols="75"></textarea></span>
+    </div>
+    <!--
+        <div class="box">
+            <span class="label">Upload a custom event thumbnail/header image
+            only one picture is allowed.</span>
+            <span class="ib"></span>
+            <input class="picButton" type="submit" value="Upload thumbnail">
+            <span class="label">Preview:</span>
+        </div>
+        <div class="box">
+            <span class="label">Upload images for event slider. Older
+            pictures will be deleted.</span>
+            <span class="ib"></span>
+            <input class="picButton" type="submit" value="Upload slider">
+            <span class="label">Preview:</span>
+        </div>
+        -->
+    <input class="picButton" type="submit" value="Create Event">
+</form>
 </body>
 </html>
