--- a/src/main/resources/static/css/eventsList.css
+++ b/src/main/resources/static/css/eventsList.css
@@ -43,11 +43,17 @@ Body {
     display: none;
     position: absolute;
     background-color: #f1f1f1;
-    min-width: 160px;
+    min-width: 450px;
+    min-height: 700px;
     overflow: auto;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
 }
+
+#myDropdown1, #myDropdown2 {
+    max-width: 50px;
+}
+
 
 .dropdown-content a {
     color: black;
