--- a/src/main/resources/templates/clubs/show.html
+++ b/src/main/resources/templates/clubs/show.html
@@ -93,14 +93,7 @@
     </ul>
 </div>
 
-<button>
-    <div class="pencil">
-        <div class="triangle"></div>
-        <div class="rec1"></div>
-        <div class="rec2"></div>
-        <div class="rec3"></div>
-    </div>
-</button>
+<button class= "editButton" type="submit">edit</button>
 
 </body>
 </html>
