--- a/src/main/resources/templates/navbar/show.html
+++ b/src/main/resources/templates/navbar/show.html
@@ -19,6 +19,9 @@
                     <div class="nav-mobile"><a id="nav-toggle" href="#!"><span></span></a></div>
                     <ul class="nav-list">
                         <li>
+                            <a href="/users">Users</a>
+                        </li>
+                        <li>
                             <a href="/clubs">Clubs</a>
                         </li>
                         <li>
