--- a/src/main/resources/templates/financeTable/list.html
+++ b/src/main/resources/templates/financeTable/list.html
@@ -1,14 +1,9 @@
 <!doctype html>
 	<html>
 	<head>
-		<link href="tabulator_modern.min.css" rel="stylesheet">
-		<script type="text/javascript" src="tabulator.min.js"></script>
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-		<style>
-		.tabulator .tabulator-header .tabulator-col {
-			text-align:center;
-		}
-		</style>
+		<link th:href="@{/css/tabulator_modern.min.css}" rel="stylesheet" />
+		<script type="text/javascript" th:src="@{/js/tabulator.min.js}"></script>
+		<script type="text/javascript" th:src="@{https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js}"></script>
 		<meta charset = "utf-" />
 	</head>
 	
@@ -22,7 +17,7 @@
 	
 	
 	
-	<script>
+	<script type="text/javascript" th:inline="javascript">
 		var table = new Tabulator("#income-table", {
 			height:"311px",
 			columns:[
@@ -72,7 +67,7 @@
 	
 	
 	
-	<script>
+	<script type="text/javascript" th:inline="javascript">
 		var table_2 = new Tabulator("#expenses-table", {
 			height:"311px",
 			columns:[
@@ -106,7 +101,7 @@
 		table_2.setData(tabledata);
 	});
 	
-	/*//stringify a json object
+	/*stringify a json object
 	$("#bruh").click(function(){
 		var selectedRows = table_2.getSelectedRows();
 		var total = 0;
