--- a/src/main/resources/templates/navbar/show.html
+++ b/src/main/resources/templates/navbar/show.html
@@ -7,11 +7,11 @@
         margin: auto;
     }
 </style>
-
     <div th:fragment="navbar">
         <link th:href="@{/css/navbar.css}" rel="stylesheet" />
 
         <section class="navigation">
+            <div><img class="logo" src="../img/sigma_logo.png"></div>
             <div class="nav-container">
                 <div class="brand">
                 </div>
