-logo added to login & register page -login & register page organized -navbar modified

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -78,10 +78,11 @@
 			display: flex;
 		}
 		#div1 {
-			padding-left: 110px;
+			padding-left: 130px;
 		}
 		#div2 {
-			padding-left: 110px;
+			padding-top: 30px;
+			padding-left: 130px;
 			padding-right: 200px;
 		}
 		.rememberMeBox{
@@ -92,12 +93,19 @@
 			font-size: 18px;
 			color: red;
 		}
+		.logo {
+			margin-left: 0;
+			margin-top: 0;
+			height: 500px;
+			width: 500px;
+			z-index: 1;
+		}
 	</style>
 </head>
 <body>
 <div id="parent">
 	<div id="div1">
-		<img src="rec.png" alt="Rectangle">
+		<img class="logo" src="../img/sigma_logo.png">
 	</div>
 	<div id="div2">
 		<center><h1>Welcome</h1></center>
