--- a/src/main/resources/templates/clubs/show.html
+++ b/src/main/resources/templates/clubs/show.html
@@ -87,10 +87,11 @@
         <ul id="requests">
             <li>
                 <a class="username" th:href="@{/users/{id}(id=${user.getId()})}" th:text="${user.getUsername()}"></a>
-                <form method="POST" th:action="@{/clubs/{id}/applications/approve(id=${club.id})}" th:object="${user}"  modelAttribute="user">
+                <form method="POST" th:action="@{/clubs/{id}/applications/approve(id=${club.id})}" >
                     <button class= "acceptbutton" type="submit" >🗸</button>
+                    <input type="date" class="formInput" name="startDate" id="startDate" required/>
                 </form>
-                <form method="POST" th:action="@{/clubs/{id}/applications/reject(id=${club.id})}" th:object="${user}"  modelAttribute="user">
+                <form method="POST" th:action="@{/clubs/{id}/applications/reject(id=${club.id})}" >
                     <button class= "rejectbutton" type="submit" >✖</button>
                 </form>
             </li>
