events page fix

--- a/src/main/resources/templates/events/show.html
+++ b/src/main/resources/templates/events/show.html
@@ -25,7 +25,7 @@
 <div class="bottom">
   <div id="buttons"><button class="descriptionButton" onclick="displayDescription()">Description</button>
     <button class="participantsButton" onclick="displayParticipants()">Participants</button></div>
-		<form method="post" action="@{/{eventid}/attendances}"><button th:if="${showAttendance}" class="registerButton">Take Attendance</button></form></div>
+		<form method="post" action="@{/${eventid}/attendances}"><button th:if="${showAttendance}" class="registerButton">Take Attendance</button></form></div>
   <div id="lineWhite"></div>
   <div id="lineGray"></div>
 
