--- a/src/main/resources/templates/events/list.html
+++ b/src/main/resources/templates/events/list.html
@@ -55,10 +55,10 @@
 
   <div class="middle">
     <div id="pastEvents">
-      <table th:each="i : ${#numbers.sequence( 0, pastEvents.size(), 4)}">
+      <table th:each="i : ${#numbers.sequence( 0, pastEvents.size(), 3)}">
         <tr>
 
-          <td th:if="${pastEvents.size()}>=1">
+          <td th:if="${pastEvents.size()}>=${i}+1">
             <p class="clubName" th:text="${pastClubs.get(i)}"></p>
             <img>
             <p class="eventName" th:text="${pastEvents.get(i).getName()}"></p>
@@ -68,7 +68,7 @@
             </div>
           </td>
 
-          <td th:if="${pastEvents.size()}>=2">
+          <td th:if="${pastEvents.size()}>=${i}+2">
           <p class="clubName" th:text="${pastClubs.get(i+1)}"></p>
           <img>
           <p class="eventName" th:text="${pastEvents.get(i+1).getName()}"></p>
@@ -78,7 +78,7 @@
           </div>
         </td>
 
-          <td th:if="${pastEvents.size()}>=3">
+          <td th:if="${pastEvents.size()}>=${i}+3">
           <p class="clubName" th:text="${pastClubs.get(i+2)}"></p>
           <img>
           <p class="eventName" th:text="${pastEvents.get(i+2).getName()}"></p>
@@ -92,10 +92,10 @@
       </table>
     </div>
     <div id="upcomingEvents">
-      <table th:each="i : ${#numbers.sequence( 0, upcomingEvents.size(), 4)}">
+      <table th:each="i : ${#numbers.sequence( 0, upcomingEvents.size(), 3)}">
         <tr>
 
-          <td th:if="${upcomingEvents.size()}>=1">
+          <td th:if="${upcomingEvents.size()}>=${i}+1">
             <p class="clubName" th:text="${upcomingClubs.get(i)}"></p>
             <img>
             <p class="eventName" th:text="${upcomingEvents.get(i).getName()}"></p>
@@ -105,7 +105,7 @@
             </div>
           </td>
 
-          <td th:if="${upcomingEvents.size()}>=2">
+          <td th:if="${upcomingEvents.size()}>=${i}+2">
             <p class="clubName" th:text="${upcomingClubs.get(i)}"></p>
             <img>
             <p class="eventName" th:text="${upcomingEvents.get(i+1).getName()}"></p>
@@ -115,7 +115,7 @@
             </div>
           </td>
 
-          <td th:if="${upcomingEvents.size()}>=3">
+          <td th:if="${upcomingEvents.size()}>=${i}+3">
             <p class="clubName" th:text="${upcomingClubs.get(i)}"></p>
             <img>
             <p class="eventName" th:text="${upcomingEvents.get(i+2).getName()}"></p>
